# slink

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: package-release.yml  python-package.yml
slink/: __init__.py  api.py  decorators.py
tests/: conftest.py  support.py  test_api.py  test_delete.py  test_errorhandler.py  test_get.py  test_pagination.py  test_post.py  test_put.py  test_queries.py
