[tool.poetry]
name = "slink-api"
version = "0.1.0"
description = "Simple and expressive REST clients without the fuss"
authors = ["James Lloyd <james.allan.lloyd@gmail.com>"]
readme = "README.md"
packages = [{include = "slink"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.6"
requests = "^2.28.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
responses = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
