[tool.poetry]
name = "slink-api"
version = "0.1.1"
description = "Simple and expressive REST clients without the fuss"
authors = ["James Lloyd <james.allan.lloyd@gmail.com>"]
readme = "README.md"
repository = "https://github.com/james-allan-lloyd/slink"
packages = [{include = "slink"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.6"
requests = "^2.28.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
responses = "^0.22.0"


[tool.poetry.group.dev.dependencies]
tox = "^4.4.7"
mypy = "^1.1.1"
types-requests = "^2.28.11.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"